# TruthNet-MFAI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
pipeline/: run_pipeline.py
services/: features.py  llm_service.py  ml_inference.py  model_store.py  search_service.py
training/: accuracy.py  main.ipynb  shap.py
